--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,8 +16,8 @@ jobs:
 
       - name: Replace script text with github variable value
         run: |
-          sed -i -e "s|{{BEARERAUTH}}|${{ secrets.BEARERAUTH }}|g" \
-           -e "s|{{POSTAPI}}|${{ secrets.POSTAPI }}|g" scripts.js
+          sed -i -e 's/{{BEARERAUTH}}/'"${{ secrets.BEARERAUTH }}"'/g' \
+           -e 's/{{POSTAPI}}/'"${{ secrets.POSTAPI }}"'/g' scripts.js
 
       # replaces {{test}} in index.html with value of secrets.TEST in gihub repo
       #- name: Replace script text with github variable value
